[package]
name = "codewalk-wagi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6"

# My favorite Rust library of all time. It makes working with errors a lot
# easier. It's the simple things in life that bring so much pleasure.
anyhow = "1.0.43"

# The markdown library
markdown = "0.3"

# Two libraries for working with frontmatter, which is in TOML format
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

# We need this stuff (plus serde above) to do Handlebars
serde_json = "1.0"
handlebars = "4.1"